# keywords

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCS.md  BENCHMARK_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GOOGLE_ADS_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_CHECKLIST.md  README.md  README_ENTERPRISE.md  README_FINAL.md  README_OLD.md  ai_assistant.py  app.py  dashboard.py  debug_google.py  demo.py  google_search.html  keyword-finder  keyword-finder.bat  main.py  oauth2_helpers.py  pyproject.toml  reliability_analysis.py  requirements-dev.txt  requirements.txt  run_production.py  seeds.txt  test_advanced_scoring.py  test_brotli.py  test_improvements.py  test_integration.py  test_openrouter_simple.py  test_pdf_generation.py  test_scraper.py
.github/: README.md  dependabot.yml
.github/workflows/: ci-cd-production.yml  ci-cd.yml  security-maintenance.yml
config/: config.yaml
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  RUNBOOK.md
exports/briefs_20250915_034738/: 000_mejor_marketing_mejor_libro.md  001_marketing_perumahan_guia_marketing.md  002_que_es_como_hacer.md  003_marketing_online_online_uax.md  004_precio_marketing_marketing_profesional.md  005_marketing_lima_lima_marketing.md  006_herramientas_marketing_marketing_automation.md  007_marketing_hoy_marketing_strategy.md
exports/briefs_20250915_035149/: 000_marketing_digital_digital_marketing.md  001_marketing_digital_que_es.md
instructions/: python.instructions.md
reports/: README.md
reports/cursos_online/: clusters_summary.csv  keyword_analysis.csv
scripts/: demo.py  generate_packages.py  main.py  reliability_analysis.py  reliability_report.py
src/: __init__.py  ads_volume.py  categorization.py  cli.py  clustering.py  database.py  exporters.py  scoring.py  scrapers.py  trends.py
src/core/: __init__.py  categorization.py  scoring.py  standardized_scoring.py
src/db/: __init__.py  database.py  enterprise.py  schema.py  standardized_schema.py
src/io/: __init__.py  ads_quota.py  ads_volume.py  env_config.py  export_standards.py  exporters.py  scrapers.py  seo_brief_generator.py  trends.py
src/keyword_finder/: __main__.py
src/keyword_finder/cli/: __init__.py
src/keyword_finder/core/: __init__.py  database.py  export_standards.py  exporters.py  main.py  scoring.py  scrapers.py  trends.py
src/keyword_finder/models/: __init__.py  schema.py  standardized_schema.py
src/keyword_finder/platform/: __init__.py  rate_limiter.py
src/keyword_finder/utils/: __init__.py  logging_utils.py
src/keyword_finder/workflows/: __init__.py
src/ml/: __init__.py  clustering.py  pipeline_config.py
src/platform/: __init__.py  cli.py  config_loader.py  enhanced_logging.py  env_config.py  exceptions_enterprise.py  logging_config_enterprise.py  rate_limiter.py  settings.py
src/utils/: __init__.py  yaml_loader.py
templates/: report_template.py  seo_brief.md.j2
tests/: conftest.py  test_ai_integration.py  test_end_to_end.py  test_enhanced_schema.py  test_enterprise_errors.py  test_enterprise_logging.py  test_scoring.py  test_seo_brief_generator.py  test_smoke.py  test_standardized_schema.py
tools/: debug_google.py  demo.py  generate_google_ads_use_case_pdf.py
