[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyword-finder"
version = "0.1.0"
description = "Keyword discovery tool with Google scraping, Trends, scoring, and exports"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","N","S","C90"]
ignore = ["E203"]
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
plugins = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --color=yes --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
skip_covered = true
show_missing = true
