[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyword-finder"
version = "0.1.0"
description = "Keyword discovery tool with Google scraping, Trends, scoring, and exports"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E","F","I","UP","B","N","S","C90"]
ignore = ["E203", "E501"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "E501"]
"tools/**" = ["E501"]
"src/scrapers.py" = ["S311", "C901"]
"main.py" = ["C901"]

[tool.mypy]
python_version = "3.11"
# Relax strictness to reduce noise from third-party libs; revisit tightening later.
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
plugins = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --color=yes --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
skip_covered = true
show_missing = true
